tests/ui/attributes/main-removed-1.rs
#[main]  //~ ERROR cannot find attribute `main` in this scope
fn main() {}
